// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components / SectionHeader renders the section header 1`] = `
<body>
  <div>
    <div>
      <div
        class="emotion-0"
      >
        <h2
          class="chakra-heading emotion-0"
        >
          Customers
        </h2>
      </div>
    </div>
  </div>
</body>
`;

exports[`Components / SectionHeader renders the section header with anchor 1`] = `
<body>
  <div>
    <div>
      <div
        class="emotion-0"
      >
        <h2
          class="chakra-heading emotion-0"
        >
          Customers
        </h2>
        <a
          href="/customers"
        >
          See all
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`Components / SectionHeader renders the section header with external anchor 1`] = `
<body>
  <div>
    <div>
      <div
        class="emotion-0"
      >
        <h2
          class="chakra-heading emotion-0"
        >
          Customers
        </h2>
        <a
          href="/customers"
          target="_blank"
        >
          See all
        </a>
      </div>
    </div>
  </div>
</body>
`;
